Fixed the main content overflowing the window horizontally

--- a/css/modules/_main.scss
+++ b/css/modules/_main.scss
@@ -4,6 +4,11 @@ html, body {
   background: #f2f2f2;
 }
 
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .period-selector {
   margin-top: 20px;
   margin-bottom: 20px;
